@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.15';
+our $VERSION = '1.16';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -372,7 +372,7 @@ I<city> [I<type>B<:>]I<name>
 
 =head1 VERSION
 
-version 1.15
+version 1.16
 
 =head1 DESCRIPTION
 
